<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#5fc6c6c6">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#ff000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>
    <TextView android:text="@string/intro_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_above="@+id/levelEasy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:textColor="#ff000000"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/levelEasy"
        android:text="@string/level_Easy"
        android:layout_marginBottom="26dp"
        android:textColor="#fffffc00"
        android:background="#ff000000"
        android:clickable="true"
        android:layout_above="@+id/levelHard"
        android:layout_alignLeft="@+id/levelMedium"
        android:layout_alignStart="@+id/levelMedium"
        android:onClick="easy"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/levelMedium"
        android:text="@string/level_hard"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/levelHard"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff000e"
        android:background="#ff000000"
        android:clickable="true"
    android:onClick="medium"/>
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/levelHard"
    android:text="@string/level_medium"
        android:textColor="#ff1c00ff"
        android:background="#ff060606"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="hard"/>
</RelativeLayout>
